--- a/BackendGuardianIQ/backend_guardianiq/backend_guardianiq.API/backend_guardianiq.API.csproj
+++ b/BackendGuardianIQ/backend_guardianiq/backend_guardianiq.API/backend_guardianiq.API.csproj
@@ -17,6 +17,8 @@
 
     <ItemGroup>
       <Folder Include="Devices\Application\" />
+      <Folder Include="Devices\Domain\" />
+      <Folder Include="PersonalSafety\Domain\" />
     </ItemGroup>
 
 </Project>
