refactor:change congiguration in appsettings.json

--- a/BackendGuardianIQ/backend_guardianiq/backend_guardianiq.API/appsettings.json
+++ b/BackendGuardianIQ/backend_guardianiq/backend_guardianiq.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    //aqui se cambia el nombre de usuario y contraseña de acuerdo a la configuración que se tenga en el Mysql local
+    "DefaultConnection": "server=localhost;user=root;password=root;database=database3"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
